<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phi_harmony_golden_ratio_calc"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.052" />

            <TextView
                android:id="@+id/txtInputValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/input_values"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <EditText
                android:id="@+id/etxtInputValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_here"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputValue"
                app:layout_constraintVertical_bias="0.152" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxtInputValue"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPercent1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent1" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPercent2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent2" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDegree"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipValue1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value1" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipValue2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value2" />
            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup">

                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/scatterBarChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_360sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_350sdp"
                    android:visibility="gone" />

                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/scatterBarChart3and4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_360sdp"
                    android:rotation="90"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>